[package]
name = "rlua"
version = "0.19.4"
authors = ["kyren <kerriganw@gmail.com>"]
edition = "2018"
description = "High level bindings to Lua 5.x"
repository = "https://github.com/amethyst/rlua"
documentation = "https://docs.rs/rlua"
readme = "README.md"
keywords = ["lua"]
license = "MIT"

[badges]
circle-ci = { repository = "amethyst/rlua", branch = "master" }

[features]
default=["rlua-lua51-sys/lua-no-oslib"]

# Enabled functions from the math module that have been deprecated
lua-compat-mathlib = []


[dependencies]
libc = { version = "0.2", default_features = false }
num-traits = { version = "0.2.14", features = ["libm", "i128"], default_features = false }
bitflags = { version = "1.0.4" }
bstr = {version = "0.2", default_features = false }
rlua-lua51-sys = {path = "./crates/rlua-lua51-sys/"}
lock_api = "0.4.9"

[dev-dependencies]
rustyline = "6.0"
criterion = "0.3.0"
compiletest_rs = { version = "0.4", features = ["stable"] }

[[bench]]
name = "benchmark"
harness = false
